# DrumKit

./: .gitignore  CMakeLists.txt  Makefile  metamodule.mk  plugin-mm.json
src/: DrumKit.cpp
src/controller/: Baronial.cpp  Marionette.cpp
